--- a/frontend/src/assets/styles/header.css
+++ b/frontend/src/assets/styles/header.css
@@ -1,35 +1,56 @@
 /* Header.css */
+
+/* Définir la police personnalisée */
+@font-face {
+    font-family: 'Helvetica-Inserat';
+    src: url('../fonts/Helvetica Inserat Font.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
+
 .transparent-header {
     font-family: 'Helvetica-Inserat', Helvetica, Bold, sans-serif;
     position: fixed;
-    top: 0;
+    width: 98%;
+    height: 80px;
+    background-color: rgba(255, 255, 255, 0.8);
+    backdrop-filter: blur(10px);
+    top: -10px;
     left: 0;
-    width: 100%;
+    right: 0;
     z-index: 1000;
     background-color: transparent;
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 1rem;
+    text-transform: uppercase;
+    font-size: 1.50rem; /* Increased from 1rem to 1.25rem */
+    font-weight: 700;
+    letter-spacing: 1px;
+    text-shadow: 1px 1px 2px rgba(0,0,0,0.1);
 }
 
 .logo {
     font-size: 1.5rem;
     font-weight: bold;
-    color: white;
+    color: rgb(255, 0, 0);
 }
 
 .main-nav {
     flex-grow: 1;
     display: flex;
     justify-content: center;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .main-nav ul {
     list-style: none;
-    display: flex;
+    display: flex;  
     margin: 0;
     padding: 0;
+    
 }
 
 .main-nav li {
@@ -37,10 +58,17 @@
     margin-right: 1rem;
     cursor: pointer;
     color: rgb(0, 0, 0);
-    font-size: 1.5rem; /* Increased from 1.125rem to 1.5rem */
+    font-size: 1.5rem; /* Augmenté de 1.125rem à 1.5rem */
     transition: color 0.3s ease;
 }
 
 .main-nav li:hover {
     color: rgb(255, 0, 0);
 }
+
+.logout-container {
+    display: flex;
+    align-items: center;
+}
+
+
