--- a/frontend/src/assets/styles/playingcard.css
+++ b/frontend/src/assets/styles/playingcard.css
@@ -1,36 +1,74 @@
-.grid-container {
-    display: grid;
-    grid-template-columns: repeat(3, 200px);
-    grid-gap: 3em;
-    justify-content: center;
-  }
-  
-  .grid-item {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr 2fr 1fr;
-    grid-gap: 5px;
-    background-color: white;
-    color: black;
-    font-size: 1.5em;
-    padding: 10px;
-    border-radius: 5%;
-    box-shadow: 0px 5px 15px grey;
-  }
-  
-  .heart {
-    text-align: center;
-    align-self: center;
-    font-size: 2em;
-    color: red;
-  }
-  
-  .top-left {
-    padding: 0.1em;
-  }
-  
-  .bottom-right {
-    align-self: end;
-    transform: rotate(180deg);
-  }
-  
+/* Base styles for all playing cards */
+.playing-card-minimal,
+.playing-card-full {
+  width: 100%;
+  height: 100%;
+  position: relative;
+  border-radius: 8px;
+  background-color: white;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 5px;
+  box-shadow: 0px 5px 15px grey;
+  border-radius: 5%;
+}
+
+/* Styles for corner elements */
+.corner {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-weight: bold;
+}
+
+.top-left {
+  position: absolute;
+  top: 5px;
+  left: 5px;
+  text-align: center;
+  padding: 0.1em;
+}
+
+.bottom-right {
+  position: absolute;
+  bottom: 5px;
+  right: 5px;
+  text-align: center;
+  transform: rotate(180deg);
+  align-self: end;
+}
+
+/* Center symbol for full card display */
+.center-symbol {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 2em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+/* Font sizes */
+.value {
+  font-size: 1.5em;
+  line-height: 1;
+}
+
+.suit {
+  font-size: 1.5em;
+  line-height: 1;
+}
+
+/* Heart color styling */
+.heart {
+  color: red;
+}
+
+/* Special styling for Joker */
+.playing-card-minimal .value:contains("Joker"),
+.playing-card-full .value:contains("Joker") {
+  font-size: 0.8rem;
+}
