--- a/frontend/src/assets/styles/team.css
+++ b/frontend/src/assets/styles/team.css
@@ -1,23 +1,26 @@
 .team-container {
     height: 100%;;
-    padding: 75px 20px 30px;
+    padding: 10%;
+    padding-top: 12vh;
     background-color: #ffffff;
+    margin-left: 10%;
+    margin-right: 10%;
 }
 
 .team-header {
     text-align: center;
-    margin-bottom: 50px;
+    margin-bottom: 40px;
 }
 
 .team-header h2 {
     color: red;
-    font-size: 2.5em;
+    font-size: 2em;
     margin-bottom: 10px;
 }
 
 .team-header p {
     color: #555;
-    font-size: 1.1em;
+    font-size: 0.9em;
     max-width: 800px;
     margin: 0 auto;
 }
@@ -36,7 +39,7 @@
     position: relative;
     background-color: #f9f9f9;
     border-left: 4px solid red;
-    padding: 30px;
+    padding: 20px;
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.05);
     transition: transform 0.3s ease, box-shadow 0.3s ease;
     display: flex;
