fix(frontend) multiple fix + scoreboard

--- a/frontend/src/assets/styles/profileDownload.css
+++ b/frontend/src/assets/styles/profileDownload.css
@@ -125,3 +125,13 @@ html::-webkit-scrollbar {
 .instructions li {
     margin-bottom: 8px;
 }
+
+.download-button:disabled {
+    background-color: #ccc; 
+    color: #666;
+    cursor: not-allowed; 
+}
+
+.download-button[disabled]:hover {
+    background-color: #ccc; 
+}
