--- a/frontend/src/assets/styles/header.css
+++ b/frontend/src/assets/styles/header.css
@@ -65,7 +65,16 @@
     color: rgb(255, 255, 255);
     font-size: 21px; /* Augmenté de 1.125rem à 1.5rem */
     transition: color 0.3s ease;
-    text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
+}
+
+.main-nav li b {
+    margin-left: 1rem;
+    margin-right: 1rem;
+    cursor: pointer;
+    color: rgb(0, 0, 0);
+    font-size: 21px; /* Augmenté de 1.125rem à 1.5rem */
+    transition: color 0.3s ease;
+    
 }
 
 .main-nav li:hover {
