--- a/frontend/src/assets/styles/mission.css
+++ b/frontend/src/assets/styles/mission.css
@@ -7,6 +7,7 @@
     margin: 0;
 }
 
+
 .card {
     border: 2px solid red;
     border-radius: 10px;
@@ -176,4 +177,25 @@
 
 .card-title {
     font-weight: 700;
+}
+
+.full-page-loading {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.loading-indicator {
+  text-align: center;
+}
+
+.loading-indicator img {
+  width: 50px;
+  height: 50px;
 }
