--- a/frontend/src/assets/styles/header.css
+++ b/frontend/src/assets/styles/header.css
@@ -24,7 +24,7 @@
     align-items: center;
     padding: 1rem;
     text-transform: uppercase;
-    font-size: 1.50rem; /* Increased from 1rem to 1.25rem */
+    font-size: 1.50rem;
     font-weight: 700;
     letter-spacing: 1px;
     text-shadow: 1px 1px 2px rgba(0,0,0,0.1);
@@ -32,8 +32,8 @@
 
 .logo {
   position: relative;
-  width: 100px; /* Adjust based on your logo size */
-  height: 100px; /* Adjust based on your logo size */
+  width: 100px;
+  height: 100px;
 }
 
 .static-logo, .gif-logo {
@@ -66,26 +66,23 @@
 .main-nav ul {
     list-style: none;
     display: flex;  
-    margin: 0;
     padding: 0;
     
 }
 
 .main-nav li {
-    margin-left: 1rem;
-    margin-right: 1rem;
+    margin-left: 2rem;
+    margin-right: 2rem;
     cursor: pointer;
     color: rgb(255, 255, 255);
-    font-size: 21px; /* Augmenté de 1.125rem à 1.5rem */
+    font-size: 21px; 
     transition: color 0.3s ease;
 }
 
 .main-nav li b {
-    margin-left: 1rem;
-    margin-right: 1rem;
     cursor: pointer;
     color: rgb(0, 0, 0);
-    font-size: 21px; /* Augmenté de 1.125rem à 1.5rem */
+    font-size: 21px;
     transition: color 0.3s ease;
     
 }
@@ -95,7 +92,7 @@
 }
 
 .main-nav ul li.active {
-    color: #ff0000; /* Red color for active link */
+    color: #ff0000; 
     font-weight: bold;
     position: relative;
 }
