--- a/frontend/src/assets/styles/header.css
+++ b/frontend/src/assets/styles/header.css
@@ -11,24 +11,26 @@
 .transparent-header {
     font-family: 'Helvetica-Inserat', Helvetica, Bold, sans-serif;
     position: fixed;
-    width: 98%;
+    width: 100%;
     height: 80px;
-    background-color: rgba(255, 255, 255, 0.077);
-    top: -10px;
+    background-color: rgba(0, 0, 0, 0);
+    top: 0;
     left: 0;
     right: 0;
     z-index: 1000;
-    background-color: transparent;
+
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 1rem;
+
     text-transform: uppercase;
-    font-size: 1.50rem;
+    font-size: 1.5rem;
     font-weight: 700;
     letter-spacing: 1px;
-    text-shadow: 1px 1px 2px rgba(0,0,0,0.1);
+    color: white;
 }
+
 
 .logo {
   position: relative;
