--- a/frontend/src/assets/styles/team.css
+++ b/frontend/src/assets/styles/team.css
@@ -1,5 +1,5 @@
 .team-container {
-    height: 100%;;
+    height: 100%;
     padding: 10%;
     padding-top: 12vh;
     margin-left: 10%;
@@ -24,7 +24,6 @@
     margin: 0 auto;
 }
 
-/* Remplacer team-members-row par team-members-list */
 .team-members-list {
     display: flex;
     flex-direction: column;
@@ -34,16 +33,14 @@
 }
 
 .member-block {
+    display: flex;
+    align-items: center;
     width: 100%;
-    position: relative;
     background-color: #f9f9f9;
     border-left: 4px solid red;
     padding: 20px;
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.05);
     transition: transform 0.3s ease, box-shadow 0.3s ease;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
 }
 
 .member-block:hover {
@@ -51,9 +48,21 @@
     box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
 }
 
+.member-avatar {
+    width: 60px;
+    height: 60px;
+    margin-right: 20px;
+}
+
+.member-image {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 50%;
+}
+
 .member-info {
     flex-grow: 1;
-    padding-right: 20px;
 }
 
 .member-name {
@@ -74,7 +83,6 @@
     display: flex;
     gap: 15px;
     margin-left: auto;
-    align-self: center;
 }
 
 .social-icon {
@@ -94,25 +102,11 @@
     background-color: darkred;
 }
 
-.member-initials {
-    min-width: 60px;
-    height: 60px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: red;
-    color: white;
-    border-radius: 50%;
-    font-weight: bold;
-    font-size: 1.5em;
-    margin-right: 30px;
-}
-
 @media (max-width: 1000px) {
     .team-members-list {
         flex-wrap: wrap;
     }
-    
+
     .member-block {
         flex-basis: 100%;
         margin-bottom: 15px;
